# kz-voiceshield

./: .dockerignore  .env.example  .gitignore  PRIVACY.md  README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
backend/: .env.example  Dockerfile  README.md  requirements-dev.txt  requirements-stt.txt  requirements.txt
docs/: AASIST_BENCHMARK.md  AI_HANDOFF_V2.0.0.md  CAPABILITY_MATRIX.md  CLOUD_AI_SECURITY.md  DATA_AND_ML_ROADMAP.md  EXTERNAL_DATA_SOURCES_2026-07-15.md  EXTERNAL_INTELLIGENCE_SETUP.md  ML_DATASET_AND_VOICE_LAB.md  MOBILE_PILOT_TEST_PLAN.md  PRODUCTION_PILOT_CHECKLIST.md  RELEASE_NOTES_2.0.3.md  RELEASE_NOTES_2.2.1.md  RELEASE_NOTES_2.2.2.md  VERIFIED_BASELINE_2.0.2.md
e2e/: smoke.spec.ts
infra/: livekit-mac.yaml
ml/: README.md  aasist_benchmark.py  aasist_inference.py  adapters.py  asr_benchmark.py  build_asvspoof_manifest.py  dataset.py  dataset_registry.py  device_benchmark.py  evaluate_models.py  export_fastconformer_kk_ru.py  finetune_gemma.py  inspect_antispoof_checkpoint.py  kz_fraud_scenarios.py  model_card.py  model_registry.py  prepare_finetune.py  prepare_kazakh_linguistic_pack.py  prepare_ksc2_language_pack.py  quality_gate.py  quality_lab.py  requirements-voice-auth.txt  requirements.txt  schemes.py  subword_tokenizer.py  synthesize.py  train_baseline.py  train_subword_model.py  voice_auth_lab.py  voiceshield_engine.py
mobile/: .gitignore  README.md  app.json  babel.config.js  index.js  package.json  (+4 more)
mobile/android/app/src/main/cpp/: CMakeLists.txt  react_featureflags_jni.cpp  whisper_jni.cpp
(+353 files in other folders)
